--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         rel="stylesheet"
         href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-light.css"
       >
-    <title>React App</title>
+    <title>Ecomm Shop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
